--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
         }
+        
+        location /api/ {
+            proxy_pass http://backend:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
 
         # Configuración para archivos estáticos
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
